fix(FeatCardBlockLarge): corrected grid alignment

--- a/packages/styles/scss/patterns/blocks/feature-card-block-large/_feature-card-block-large.scss
+++ b/packages/styles/scss/patterns/blocks/feature-card-block-large/_feature-card-block-large.scss
@@ -24,6 +24,7 @@ $fcb-breakpoint-up--lg: map-get(
     background: $ui-background;
     position: relative;
     height: 100%;
+    @include hang;
 
     @include carbon--breakpoint-between(
       $fcb-large-custom-bp-copy,
